--- a/q/274342.html
+++ b/q/274342.html
@@ -26,21 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
-<tr d-ix="1"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
-<tr d-ix="2"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
-<tr d-ix="3"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
-<tr d-ix="4"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
-<tr d-ix="5"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
-<tr d-ix="6"><td>034</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
-<tr d-ix="8"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
-<tr d-ix="9"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
-<tr d-ix="10"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
-<tr d-ix="11"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
-<tr d-ix="12"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
+<tr d-ix="0"><td>215</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
+<tr d-ix="1"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
+<tr d-ix="2"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="3"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="4"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
+<tr d-ix="5"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
+<tr d-ix="6"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
+<tr d-ix="7"><td>034</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
+<tr d-ix="9"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
+<tr d-ix="10"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
+<tr d-ix="11"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
+<tr d-ix="12"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
+<tr d-ix="13"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, 215 bytes</h1>
+<pre class="lang-c prettyprint-override"><code>char*c(char*s,char*i){char*r=malloc(strlen(s)),*z,o,t;r=strcpy(r,s);for(;*i;++i){z=strchr(r,'|');o=(*i==60&amp;&amp;z-r)?-1:(*i==62&amp;&amp;*(z+1))?1:0;t=*z;*z=*(z+o);*(z+o)=t;if(*i==35&amp;&amp;z-r)memmove(z-1,z,strlen(z)+1);}return r;}
+</code></pre>
+<p><a href="https://www.programiz.com/online-compiler/3kNfDNTPRAtTC" rel="nofollow noreferrer">Try on programiz.com</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
 <p>Saved <strong>11 bytes</strong> using <code>r[1]=</code> to remove the first character of <code>$r</code> and <code>l[-1]=</code> to remove the last character of <code>$l</code>.</p>
 
 <pre class="lang-sh prettyprint-override"><code>IFS=\|
@@ -65,7 +71,7 @@ for m;    # motions as separate arguments
 &lt;&lt;&lt;$l\|$r
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
 <p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
 <pre><code>:
 s/(.)?\|(.* )&lt;/|\1\2/
@@ -75,7 +81,7 @@ t
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEXXySkC2bSCDXUpIV2oN3CZTaABC6GRznQ3ZzdOWkR9zOr/xx@IYylnCabp2sFT0x1Eaw353p8MpzVphy11xve0p93H1NU0Eku5PyZQfEFhBCShbUVvOHlZF6C8qDiPWy/cL3YXuAfCsOCu2C/OymtMEaMKKfH2H44FSbzI39wrP3HKM5Tj7Q0" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s></sup> 87 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s></sup> 87 bytes</h1>
 <p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em><br />
 <em>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/122251/no-comment">@no comment</a></em></p>
 <pre class="lang-python prettyprint-override"><code>def f(s,o):
@@ -84,7 +90,7 @@ t
 <p><a href="https://ato.pxeger.com/run?1=XVDNSsMwHD-3TxEyRhPtSicIUtrCUATBg-DAQ9dDsSlNqWloMpiQN_Gyi77TLj6JB_PR6fRHCOnvq__k7YO_ynZg-_37VjaLq8NTTRrQIBEOOPFBM4yAAsrAkIjipdqhOOzO6fxyscRJXGYi4gNHXaIPlNVkhwIVYFzQ-UUep1121LW7nOo_TWNPGbGlnDAUm_9oUMZDQHYcZFaPRiFHyhGOBO-pRHAjFzmA2HpFqLNCO3Vo0oONDEKwdLoT9R5NJb6jt1LTxZko7WeDNGGbIsKeh5og7OJ8pEyiAt6u7u5hCODD6vERlgWEUTdQZlIYZJkZttTqCYvdLfeHr3VLBdCrApIIqTxvlhrMLHLP03dZt5Uyqn-9HYXSz0JYbd1eforUuY3pxKP8iRBKVqN0ufQXeWpT6uj6Mfk3pCeSgKrv9VTe7A9ynbQx32ieHiS107ouf8UG2ZLR9Cj5P2tgbdI9wjc" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Modifies the input in-place</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
 <pre><code>⍜⊙↻⊂@|∧⊃(+-⊸¬=@&gt;|⍜⊙↻↘=@#⊙-⊙1):⊙:⊙▽⊃⊗⊸≠@|
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_2__IiM8PDw8PCMjIyMjIz4iCgoiVGhpcyBpcyBhIHRlc3R8IgoK4o2c4oqZ4oa74oqCQHziiKfiioMoKy3iirjCrD1APnzijZziipnihrvihpg9QCPiipkt4oqZMSk64oqZOuKKmeKWveKKg-KKl-KKuOKJoEB8Cg==" rel="nofollow noreferrer">Try it out!</a></p>
@@ -101,13 +107,13 @@ t
 ⍜⊙↻⊂@|        # Insert the cursor back into the string at cursor position
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 120 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 120 bytes</h1>
 <p>Expects the string in A2 and the moves in B2:</p>
 <pre class="lang-cpp prettyprint-override"><code>=REDUCE(A2,SEQUENCE(LEN(B2)),LAMBDA(a,i,REGEXREPLACE(a,&quot;(.?)\|(.?)&quot;,SWITCH(MID(B2,i,1),&quot;&gt;&quot;,&quot;$1$2|&quot;,&quot;&lt;&quot;,&quot;|$1$2&quot;,&quot;|$2&quot;)))) 
 </code></pre>
 <p><a href="https://i.sstatic.net/XOzv4qcg.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/XOzv4qcg.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 92 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 92 bytes</h1>
 <h3>-1 thanks to @xnor</h3>
 <pre class="lang-python prettyprint-override"><code>lambda s,c:[s:=re.sub((2*&quot;((\.|))&quot;)[i&lt;&quot;=&quot;::2],r&quot;\2\1&quot;[:ord(i)&amp;6],s)for i in c][-1]
 import re
@@ -120,7 +126,7 @@ import re
 <p><a href="https://ato.pxeger.com/run?1=VY5BboMwEEX3nGJkFrFTghpWEQJv2hNU3QGqHGKUkcBYtllUYt9DdBOpau-U23QIldp-2bOZp__m_cu-hvNoLh9dWX9Oodsdrk2vhuNJgU_avPJ56XTqpyPn2ZZxXqezEExUWLCS5XnWJI7VGbujuWdbjpLFTCRedKMDBDTQNtVu30Q42NEFcPpH8rQAPRq9MKPVht-LPAKSviQtlDAoy31wKX20yQKmzioXMOBo-AY2QhBtHZrAO06nCrE2X65vz2f0QE9B0D7MEBdL4ltk9DA5P5Ncm9NtD_JvihWgvZ8D-Vak-I0sokfd66BB9T11_4skIJqpkWxyvecb" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Inspired by other regex based answers.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>35</s> 34 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>35</s> 34 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Çvā&lt;VÐ'|kDy61.S+‚YÃUy₆›iXèë'|æ}RXǝ
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$moves,string\$</span>.</p>
@@ -151,12 +157,12 @@ import re
                   # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
 <pre><code>gniomh(s,m){s=roinn@s(&quot;|&quot;)t:=s[1]s=s[0]le i idir(0,fad@m){i=m[i]u:=fad@s ma i==&quot;&lt;&quot;&amp;u{t=s[-1]+t s=cuid@s(0,u-1)}ma i==&quot;&gt;&quot;&amp;fad@t{s+=t[0]t=cuid@t(1,fad@t)}ma i==&quot;#&quot; s=cuid@s(0,u-1)}toradh s+&quot;|&quot;+t}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICw1-6bCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
 <pre><code>≔⪪Ｓ¹θＦ⁺×&lt;⌕⮌θ|⁺#Ｓ≡ι&lt;«¿θ⊞υ⊟θ»&gt;«¿υ⊞θ⊟υ»≔∧θ⊟θηＦθι|Ｗυ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##VY/PasMwDMbP8VMI56JAdti1KYVeCruVtS9gUqcWePknuz2sfXZPSZqxCRtZ5sf3faqdGevO@JT2zHRt8dR7CvjR9jGcwkjtFYsS3uUORaWabgQ8@sh4pi/LqLe6hAO1F/y0NzuyxUFI/dCFtJnTuRD/1KRUxncKtQOkAr5VVhu2IFqbacioAZGBY2SHUWS6XkYxz54ruftDxhc5LGRcyYttTPRhA6@99hJy@FUrwQn3XBaazCRbkDSVWl7TCpW6O/J2sZh/V4OUzo4Y5BgIlsND5dup8rl26e3mfwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -179,13 +185,13 @@ import re
 </code></pre>
 <p>Reconstitute the string from the lists.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>g=(x,[c,...d])=&gt;c?g(x.replace(/(.?)\|(.?)/,c&lt;g?'|$2':c&gt;'='?'$1$2|':'|$1$2'),d):x
 </code></pre>
 <p><a href="https://tio.run/##HYjBCsMgEAV/JRBhVzCG5hii/kRvbQ@yEZsSYohSPPjvNunwGB7zsV8b6Vj21G1hdrV6hVk8SEgp5xdXmozHLA@3r5Yc9igNf5bLvaDJGyhsgJE0KDDAbmwoMJ7tPMDFzMdcKWwxrE6uwaNHuL@X2JyzTXIxFRDQThftHw2c1x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>%C=qw(&lt; (.)\|/|$1/ &gt; \|(.)/$1|/ # .\|/|/);eval join&quot;;s/&quot;,@C{&lt;&gt;=~/^|./g}
 </code></pre>
@@ -196,7 +202,7 @@ import re
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEX3OcXQRtoubFBw1TQI9QguuwkYtBDamkRdOHp049gu1McsHvzPn9E4u4lx0dTnWy7Bi7zIy6JFUOQtkkNKVrZYVDypM8FXyNeiyipz1TbZNnep6qfgWIrjI4lxf@o80GkIxgdkqfyQTijWXJzHwYHpD1PO1C9yLlDuMWgX5or8oiTbGWuCAW0tbf@hqMCQFumbeg1j6Ibex@Vo3w" rel="noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
 <pre><code>+`\|(.?)(.*&#9;)&gt;|(.?)\|(.*&#9;)&lt;|.?\|(.*&#9;)#
 $1|$2$3$4$5
 &#9;
@@ -204,7 +210,7 @@ $1|$2$3$4$5
 </code></pre>
 <p><a href="https://tio.run/##VY29CsMwDIRn6ykM9pC0YOjfZpShfYSOHWqooAGTgu1sendXcQptPzScdMcpURmnUOv2fuPODX3nNqrHJpeDLJ7d8JEG7I7t3h7s0Z5AQa3X55i1TNCFcmFl/IJpIJznlPmVNE2P5iv8xa8B8TOXkMoa8V/Qw4UiFdIhRun@AyUALI3yDd8" rel="noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Takes input separated by tabs (normally would have used newlines but that makes writing a test suite harder). Explanation: The replacement stage simply shuffles the <code>|</code> around depending on the next operation, with the <code>+</code> prefix repeating until no more operations remain, then finally the tab is deleted.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda s,n=0,*m:n and f([(x:=s[:(c:=s.find('|'))and~-c])+'|'+s[c-1:c]+s[c+1:],0,s[:c]+s[c+1:c+2]+'|'+s[c+2:],x+s[c:]][ord(n)%4],*m)or s
 </code></pre>
