--- a/q/98322.html
+++ b/q/98322.html
@@ -26,21 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Uiua</td><td>240723T201459Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/274368#274368">nyxbird</a></td></tr>
-<tr d-ix="1"><td>009</td><td>JCram</td><td>240723T132808Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/274352#274352">Kamila S</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Jelly</td><td>170803T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/137429#137429">Erik the</a></td></tr>
-<tr d-ix="3"><td>065</td><td>Bash</td><td>161127T101901Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/101232#101232">zeppelin</a></td></tr>
-<tr d-ix="4"><td>068</td><td>MATLAB</td><td>161126T222938Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/101213#101213">PieCot</a></td></tr>
-<tr d-ix="5"><td>049</td><td>PHP</td><td>161122T051144Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/100702#100702">Titus</a></td></tr>
-<tr d-ix="6"><td>129</td><td>Ruby 2.x</td><td>161122T032533Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/100697#100697">freakyfe</a></td></tr>
-<tr d-ix="7"><td>063</td><td>Perl</td><td>161105T223902Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98671#98671">Dada</a></td></tr>
-<tr d-ix="8"><td>109</td><td>Racket</td><td>161106T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98689#98689">rnso</a></td></tr>
-<tr d-ix="9"><td>098</td><td>Python 2</td><td>161103T032752Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98381#98381">Wheat Wi</a></td></tr>
-<tr d-ix="10"><td>102</td><td>Perl</td><td>161105T024236Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98617#98617">Gabriel </a></td></tr>
-<tr d-ix="11"><td>146</td><td>Python 2</td><td>161105T040541Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98622#98622">Daniel</a></td></tr>
-<tr d-ix="12"><td>078</td><td>Haskell</td><td>161104T013758Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98551#98551">nimi</a></td></tr>
+<tr d-ix="0"><td>005</td><td>Vyxal</td><td>240726T015748Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/274447#274447">emanresu</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Uiua</td><td>240723T201459Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/274368#274368">nyxbird</a></td></tr>
+<tr d-ix="2"><td>009</td><td>JCram</td><td>240723T132808Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/274352#274352">Kamila S</a></td></tr>
+<tr d-ix="3"><td>014</td><td>Jelly</td><td>170803T175534Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/137429#137429">Erik the</a></td></tr>
+<tr d-ix="4"><td>065</td><td>Bash</td><td>161127T101901Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/101232#101232">zeppelin</a></td></tr>
+<tr d-ix="5"><td>068</td><td>MATLAB</td><td>161126T222938Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/101213#101213">PieCot</a></td></tr>
+<tr d-ix="6"><td>049</td><td>PHP</td><td>161122T051144Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/100702#100702">Titus</a></td></tr>
+<tr d-ix="7"><td>129</td><td>Ruby 2.x</td><td>161122T032533Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/100697#100697">freakyfe</a></td></tr>
+<tr d-ix="8"><td>063</td><td>Perl</td><td>161105T223902Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98671#98671">Dada</a></td></tr>
+<tr d-ix="9"><td>109</td><td>Racket</td><td>161106T044903Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98689#98689">rnso</a></td></tr>
+<tr d-ix="10"><td>098</td><td>Python 2</td><td>161103T032752Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98381#98381">Wheat Wi</a></td></tr>
+<tr d-ix="11"><td>102</td><td>Perl</td><td>161105T024236Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98617#98617">Gabriel </a></td></tr>
+<tr d-ix="12"><td>146</td><td>Python 2</td><td>161105T040541Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98622#98622">Daniel</a></td></tr>
+<tr d-ix="13"><td>078</td><td>Haskell</td><td>161104T013758Z</td><td><a href="https://codegolf.stackexchange.com/questions/98322/ordered-list-of-binary-sequences-of-multiple-dimensions/98551#98551">nimi</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 5 bytes</h1>
+<pre><code>k≈↔µ∑
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJr4omI4oaUwrXiiJEiLCIiLCI0Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>  ↔    # Combinations of length n of
+k≈     # [0, 1]
+   µ∑  # Sorted by bitsum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 12 bytes</h1>
 <pre><code>⊏⍏≡/+.⇌⋯⇡ⁿ:2
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_2__ZiDihpAg4oqP4o2P4omhLysu4oeM4ouv4oeh4oG_OjIKZiAwCmYgMQpmIDIKZiAzCmYgNAo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -53,14 +63,14 @@
   ≡/+        # bitsums
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 9 bytes (SBCS)</h2>
+<div id="pu2" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 9 bytes (SBCS)</h2>
 <pre><code>∩T⍺⁹H↓Ͼ
 </code></pre>
 <p>Encodes the following ES6 program:</p>
 <pre><code>n=&gt;[...Array(1&lt;&lt;n)].map((_,i)=&gt;i.toString(2).padStart(n,0))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 14 bytes</h1>
 
 <pre><code>2Ḷṗ⁸TṪ$N$ÞSÞYȯ
 </code></pre>
@@ -69,7 +79,7 @@
 
 <p>Surprised this hadn't been posted yet.</p>
 </div>
-<div id="pu3" class="pu"><h1>Bash, 65 bytes</h1>
+<div id="pu4" class="pu"><h1>Bash, 65 bytes</h1>
 <p><strong>Golfed</strong></p>
 <pre><code>seq -f &quot;obase=2;%g+2^$1-1&quot; $[2**$1]|bc|cut -c2-|tr 0 ~|sort|tr ~ 0
 </code></pre>
@@ -94,22 +104,22 @@
 1111
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h2>MATLAB, 68 bytes</h2>
+<div id="pu5" class="pu"><h2>MATLAB, 68 bytes</h2>
 
 <pre><code>d=@(n)dec2bin(sortrows([sum(dec2bin(0:2^n-1)');0:2^n-1]')*~eye(2,1))
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>PHP, 49 bytes</h1>
+<div id="pu6" class="pu"><h1>PHP, 49 bytes</h1>
 <pre><code>while($i&lt;1&lt;&lt;$n=$argv[1])printf(&quot;%0${n}b\n&quot;,$i++);
 </code></pre>
 <p>Run with <code>-r</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1>Ruby 2.x, 129 bytes</h1>
+<div id="pu7" class="pu"><h1>Ruby 2.x, 129 bytes</h1>
 
 <pre><code>f=-&gt;(n){z='0';p=n.bit_length;(0..n).map{|i|sprintf("%0#{p}d",i.to_s(2))}.sort{|a,b|a=a.delete(z).size-(b=b.delete(z).size)||b-a}}
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h2>Perl, 63 bytes</h2>
+<div id="pu8" class="pu"><h2>Perl, 63 bytes</h2>
 
 <p><i>-4 thanks to @Ton Hospel.</i><br>
 <i>-2 thanks to @Gabriel Benamy.</i>  </p>
@@ -131,7 +141,7 @@
 <li>And then the sort : <code>$b=~y/1//c-$a=~y/1//c</code> compares the number of <code>1</code> in each string, and if they have the same number, <code>$b-$a</code> will sort according to the second rule.  </li>
 </ul>
 </div>
-<div id="pu8" class="pu"><h2>Racket 109 bytes</h2>
+<div id="pu9" class="pu"><h2>Racket 109 bytes</h2>
 
 <pre><code>(let loop((s ""))(if(= n(string-length s))(displayln s)(for((i '("0" "1")))(loop(string-append s i)))))
 </code></pre>
@@ -189,7 +199,7 @@
 1111
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>Python 2, <s>122</s> <s>120</s> <s>102</s> 98 bytes</h1>
+<div id="pu10" class="pu"><h1>Python 2, <s>122</s> <s>120</s> <s>102</s> 98 bytes</h1>
 
 <p><em>18 bytes saved thanks to  Flp.Tkc</em></p>
 
@@ -216,7 +226,7 @@
 
 <p>Lastly these are joined with newlines and printed.</p>
 </div>
-<div id="pu10" class="pu"><h1>Perl, <s>116</s> <s>106</s> <s>105</s> 102 bytes</h1>
+<div id="pu11" class="pu"><h1>Perl, <s>116</s> <s>106</s> <s>105</s> 102 bytes</h1>
 <pre><code>sub e{sprintf&quot;%0$%b&quot;,@_}sub f{$_=e@_;/0*$/;$%*y/1//-$-[0]}map{say e$_}sort{f($a)&lt;=&gt;f$b}0..2**($%=&lt;&gt;)-1
 </code></pre>
 <p>Readable:</p>
@@ -236,7 +246,7 @@ map{
 <p>The range 0 .. [input]<sup>2</sup>-1 is then put through a stable sort, ordering by the weight (here, &quot;stable&quot; means that when two values have the same weight, they are returned in the same order they appear in the input), and then they are fed back to the subroutine <code>e</code> and output.</p>
 <p>Some of you may have seen my original post, but I entirely misread the problem yesterday and deleted it immediately after I realized it.</p>
 </div>
-<div id="pu11" class="pu"><h2>Python 2, 146 bytes</h2>
+<div id="pu12" class="pu"><h2>Python 2, 146 bytes</h2>
 
 <pre><code>from itertools import*
 lambda i:sum([sorted({''.join(b)for b in permutations((i-n)*"0"+"1"*n)},key=lambda x:x[::-1])[::-1]for n in range(i+1)],[])
@@ -260,7 +270,7 @@ print
 for line in p:print line
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h2>Haskell, 78 bytes</h2>
+<div id="pu13" class="pu"><h2>Haskell, 78 bytes</h2>
 
 <pre><code>import Data.List
 f n=sortOn(\x-&gt;sum x:reverse(map(1-)x))$mapM id$[0,1]&lt;$[1..n]
