--- a/q/274288.html
+++ b/q/274288.html
@@ -26,14 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Pyth</td><td>240725T230147Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274445#274445">CursorCo</a></td></tr>
-<tr d-ix="1"><td>112</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
+<tr d-ix="0"><td>110</td><td>C gcc</td><td>240724T225036Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274423#274423">engineer</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Pyth</td><td>240725T230147Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274445#274445">CursorCo</a></td></tr>
 <tr d-ix="2"><td>141</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
 <tr d-ix="3"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
 <tr d-ix="4"><td>096</td><td>K ngn/k</td><td>240722T100340Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274321#274321">Bubbler</a></td></tr>
 <tr d-ix="5"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 22 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <sup><s>112</s></sup> 110 bytes</h1>
+<p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
+
+<pre class="lang-c prettyprint-override"><code>double k(double u){int V=2e4,i=0;double L[V*8],l=1;for(*L=1;i++&lt;u*V-V;L[i]=l-=L[i&gt;V?i-V:0]/(i+V-1));return l;}
+</code></pre>
+<p><a href="https://tio.run/##lVVrb5tIFP3Or7hyZQkwkAHMqw6pskoqVaWrarNrrZRaEcFDPBs8oGFIusr6t3tnYHDcdbRS/cEMd@4993WOXdgPRbHfr@vuvsLwqKtDZ7wQymGZenhukRQtlD27XZrxyqpSd1HWTDczcSCz2XlnLu3lIrslq7SyU/G8WH4g9vI9Wp3pZLa0XcNYMMw7RqFa7PbvCC2qbo3hvOXr@7qunM2F9mrc5nzzo0W4kfrEVJF7adP43w1e4xJUkbp59bnsaGGoboyFpp2ZGpjwO255C3yDocnbFq/hihSP25zaAvAX1pG/KMhATmoKXUvoQ@@Lv@fbRuByEQ1F3uLWkWBXmGO2JRS3QMre8RBLWngmfEMoIMedQj1cFzVjuOCQ0/YZMxADhLyqJJRyUIl6@DPtnWhJoMOvf3y5/vPyy9fs@gYireU5J4XAoqIY1bCKuyO06Xh7exSwghReXAtcx7fAcxIL5o5nQeAEFkQWxDtLgzc@I2Dd8bcQDzESGjmRH4V@EPlB4HsBSjJpQ0ESR7HrikfoRygajMhLomAezaM4CWI38IT1gCWvEYpD5Mah67oeClw3FA6xE82DMEwSgZ74iXdtSzDf8XwPhYmP5p4XuujajrPdQnuqybrf0904S33gAjQGvPS5JN369YtGOOuwIIc0y23okvOS7UDOj1oWr7PZGC4/auz9uAXKf8ZPVidDxd8bufj0ZLBv@D7U0rHRezTj5LrBrMBUupT5fasrZFuGGXA2ZjLBRWKg2eIQfjg0THRZ6pNGnzpeVRoCaeq4QVWCAhOyGAwG/CNOflVOp4AZq9k3OjnlS1@nJfNbKrs1Fmm8phcK0cfSL1IpC2NcQplXLR48d/23nIzeX36AydfLm5sJvIfJx8tP2UQg7kYx/9bRQctKxK/ya6B@EgLLQUp4XNQgqp4grKN3NcUHalhw@NlTWz4a0vGI5ACgE/3pnfFTpeC82MBzzdZS6m@V09uOCpJMzNlDYUGxyRmYpnh5Gqs74qoruSodB5Ie5j22KKBazni91iWA5Jv4PckyVb3E2OaE6v@bTlUlZdUfUngc1vWj0MZ7tfXXrsYLS6XosZXT8J@ARDX7feyE@8gJ9r6Dkn8B" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p>Splits the domain <span class="math-container">\$[1,8]\$</span> across <span class="math-container">\$(8-1)(2*10^4)=140000\$</span> slices and computes each slice's y-value successively based off of the previous y-values.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 22 bytes</h1>
 <pre><code>L|g1b-y-b^T_6cytb*b^T6
 </code></pre>
 <p><a href="https://tio.run/##K6gsyfj/36cm3TBJt1I3KS4k3ji5siRJC8gy/l9pqGf8HwA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a> (link is to a faster version of the code which has way too much error, but will actually run online)</p>
@@ -50,13 +58,6 @@
              c            #  divided by
                  *b^T6    #  b * 10^6
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 112 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>double k(double u){int V=1&lt;&lt;14,i=0;double L[V*8],l=1;for(*L=1;i++&lt;u*V-V;L[i]=l-=L[i&gt;V?i-V:0]/(i+V-1));return l;}
-</code></pre>
-<p><a href="https://tio.run/##lVVbb6NGFH7nVxx5ZQkwEAbMbW2ySpWsVJWtVk1rVUqtiOAhngYPaBiSrVL/dncGBsdbR5XKAwzn8p3bd6CwH4vicNjU3UOF4UlXh854JZTDKkXLJZpbJHUXSpPdrcx4bVUpWpQ1081MHMhstuzMlb1aZHdknVZ2Kp6Xq0/EXn101xc6ma1sZBgLhnnHKFSL/eEDoUXVbTAsW755qOvK2V5qb8JdzrffS4QZqc9EFXmQMo3/1eANLkElqZvXP5UdLQxVj7HQtAtTAxN@xS1vgW8xNHnb4g1ck@Jpl1NbAP7AOvInBenISU2hawl97G3xt3zXCFwuvKHIW9w6Euwac8x2hOIWSNkbHn1JCy@EbwkF10FTqAd1UTOGCw45bV8wA9FAyKtKQikDFaiHv9A@iJIEOvz825eb36@@fM1ubiHSWp5zUggsKpJRBSu/e0Kbjrd3Jw5rSOEVWYAc3wLPSSyYO54FgRNYEFkQ7y0N3rlGwLrj7yEefSS060R@FPpB5AeB7wVukkmZGyRxFCMkHqEfudEgdL0kCubRPIqTIEaBJ6RHLKl23Th0URwihDw3QCgUBrETzYMwTBKBnviJd2NLMN/xfM8NE9@de16I3Bs7zvYL7bkmm35O92Mv9YEL0Bjw2seSdOvHLwrhrMOCHFIsp6FL1ku2A1melCxeZ7PRXV6q7X27Bcq/2k/WZ03F3xo5@PSsse/YPtbSsNF7NONM3WBWYCpNyvyh1RWyLd0MuBgjmYBc0dBscXQ/Hhomqiz1SaNPHa8qDYE0dVBQlaDAxFoMAgP@Fie/KqdTwIzV7A86OedLn6cl41squjUmabyFFxuij6lfpnItjHEIZV61eLDc93fZGb1XfoLJ16vb2wl8hMnnqx@ziUDcj8v8S0eHXVZL/LZ@DdTPYsFykCs8DmpYqp4grKP3NcVHalhw/PCpKZ806bRFsgHQifr0zvhfqeC82MJLzTZy1d9Lp5edJCSZmLPHwoJimzMwTfHyPGZ3wlUkuSoNB5Ie@z2WKKBazni90SWA5Jv4nmSZyl5i7HJC9f8Mp7KSa9UfUngaxvX9oo16NfW3qkaFpUL02Mpo@Ce4IpvDIXbCQ@QEB99xk38A" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-<p>Splits the domain <span class="math-container">\$[1,8]\$</span> across <span class="math-container">\$(8-1)2^{14}=114688\$</span> slices and computes each slice's y-value successively based off of the previous y-values.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 141 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>g=lambda x,p=[1]+[0]*99,I=2,z=0,i=0:x&lt;1and sum(a*(1-x)**~-(i:=i+1)for a in p)or g(x-1,[p[0]-sum(A:=[(z:=(z+w)/I)/(i:=i+1)for w in p])]+A,I+1)
@@ -179,11 +180,11 @@ def g(x):
 </code></pre>
 <p>Evaluate the polynomial at <code>x-⌊x⌋</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 96 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 96 bytes</h1>
 <pre><code>{E[-0.5+1!x;(1,&amp;20){(E[0.5;x]+E[-0.5;w]%2),w:({z-y%x}[y]\x)%y*|!-#x}/1.5+!_x]}
 E:{{z+y*x}[x]/|y}
 </code></pre>
-<p><a href="https://ngn.codeberg.page/k#eJwljEEOgyAURPecosTQgAgKlrSFNaegpDuv4P8id+83Xby3mJnMFlsuZrFBOw5JuunuF9VkLhQlqPpfpr0Kr6Y9ynYYFNAL1g8ogePJzQB9dnTAv1A7y7G1Q+NIG6jziZ2x7eYu7Er29k1+WE8ONpCfxOsHxlIjsg==" rel="nofollow noreferrer">Try it online!</a></p>
+<p><a href="https://ngn.codeberg.page/k#eJwljEEOgyAURPecosTQgAgKlrSFNaegpDuv4P8id+83Xby3mJnMFlsuZrFBOw5JuunuF9VkLhQlqPpfpr0Kr6Y9ynYYFNAL1g8ogePJzQB9dnTAv1A7y7G1Q+NIG6jziZ2x7eYu7Er29k1+WE8ONpCfxOsHxlIjsg==" rel="noreferrer">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274316/78410">my own Python answer</a>. It could have been a bit shorter if base conversion allowed non-integer bases, and those <code>0.5</code>s hurt too.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
